# ros2_simulator_2d

./: CMakeLists.txt  package.xml
config/: simulator_nav2_params.yaml
include/simulator/: map_loader.hpp  obstacle_manager.hpp  physics_engine.hpp  robot.hpp  simulator_node.hpp  sweep_runner.hpp
include/simulator/gui/: edit_tool.hpp  main_window.hpp  map_view.hpp  param_config_dialog.hpp  sweep_panel.hpp
launch/: simulator.launch.py  simulator_nav2.launch.py
src/: main.cpp  map_loader.cpp  obstacle_manager.cpp  physics_engine.cpp  robot.cpp  simulator_node.cpp  sweep_runner.cpp
src/gui/: main_window.cpp  map_view.cpp  param_config_dialog.cpp  sweep_panel.cpp
