<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator</name>
  <version>0.1.0</version>
  <description>ROS2 2D Simulator (Stage-like)</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>rosgraph_msgs</depend>

  <build_depend>libyaml-cpp-dev</build_depend>
  <exec_depend>libyaml-cpp0.7</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
